# messanger_bridge

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
messanger_bridge/: main.py  settings.py
messanger_bridge/bridges/: abstract_bridge.py  simple_bridge.py
messanger_bridge/messangers/: abstract_messanger.py  discord_messanger.py  telegram_messanger.py
messanger_bridge/models/: message.py
messanger_bridge/storages/: abstract_storage.py  static_storage.py
messanger_bridge/transports/: abstract_transport.py  redis_transport.py
